# rawpy

./: .gitmodules  pyproject.toml
.github/scripts/: build-windows.ps1
rawpy/: _rawpy.pyx
