[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cython",
    "numpy>=1.26.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "rawpy"
version = "0.25.1"
author = "Maik Riechert"
description = "RAW image processing for Python, a wrapper for libraw"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy >= 1.26.0",
]

[project.urls]
Homepage = "https://github.com/letmaik/rawpy"

[project.optional-dependencies]
dev = [
    "wheel>=0.31.0",
    "delocate; sys_platform == 'darwin'",
    "cython",
    "scikit-image",
    "pytest",
    "imageio>=2.21",
    "setuptools",
    "sphinx_rtd_theme",
    "sphinx",
]